adds initial temperature test

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="jasmine/lib/jasmine-2.8.0/boot.js"></script>
 
   <!-- source -->
-  <script src=""></script>
+  <script src="src/thermostat.js"></script>
 
   <!-- spec -->
-  <script src=""></script>
+  <script src="spec/thermostatSpec.js"></script>
 
 </head>
 
